--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,14 +1,43 @@
 @import url(/node_modules/modern-normalize/modern-normalize.css);
 
+body {
+  color: #2b2d42;
+  font-family: sans-serif;
+}
+
+main {
+  padding: 100px 0 40px;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  height: auto;
+  width: 100%;
+  object-fit: cover;
+}
+
 .header {
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
   background-color: #2b2d42;
-  width: 100%;
+  width: 100vw;
   padding: 10px 0;
   box-shadow: 0 0 5px 3px #2b2d42;
+  z-index: 999;
 }
 
 .search-form {
@@ -35,6 +64,7 @@
   justify-content: center;
   align-items: center;
   width: 50px;
+  cursor: pointer;
 }
 
 .search-form:is(:hover, :focus) {
@@ -43,4 +73,74 @@
 
 .search-form:focus-within {
   box-shadow: 0 0 5px 3px #60efff;
+}
+
+.search-form button .icon {
+  fill: #2b2d42;
+  transition: fill 0.3s linear;
+}
+
+.search-form button:is(:hover, :focus) .icon {
+  fill: #60efff;
+}
+
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-self: center;
+  gap: 20px;
+  margin: 0;
+}
+
+.gallery-item .link {
+  display: block;
+  width: calc((100% - (20px * 3)) / 4);
+  border: none;
+  box-shadow: 0 0 2px 1px #2b2d4244;
+  border-radius: 4px;
+  transition: transform 0.3s linear;
+  background-color: white;
+}
+
+.gallery-item:is(:hover, :focus) {
+  transform: scale(1.15);
+  box-shadow: 0 0 10px 5px #2b2d4244;
+  z-index: 2;
+}
+
+.image {
+  aspect-ratio: 16 / 9;
+}
+
+.image-info {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px 5px;
+  overflow: hidden;
+}
+
+.image-info-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
+}
+
+.image-info-title {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.image-info-data {
+  font-size: 14px;
+  font-weight: 500;
 }
